Fixed theme button on mobile devices

--- a/src/layouts/main-layout/components/header/components/theme-toggle/theme-toggle.module.scss
+++ b/src/layouts/main-layout/components/header/components/theme-toggle/theme-toggle.module.scss
@@ -3,17 +3,24 @@
 .themeToggle {
   background: var(--color-transparent);
   border: 1px solid var(--color-transparent);
-  padding: 0.5rem;
+  padding: 0.75rem;
+  min-width: 2rem;
+  min-height: 2rem;
   cursor: pointer;
   display: flex;
   align-items: center;
   justify-content: center;
   transition: all 0.2s ease;
   color: var(--color-text-primary);
+  touch-action: manipulation;
+  -webkit-tap-highlight-color: transparent;
 
-  &:hover {
-    background: var(--color-border);
-    border-radius: borders.$border-radius-md;
+  // Apply only for mouse devices
+  @media (hover: hover) {
+    &:hover {
+      background: var(--color-border);
+      border-radius: borders.$border-radius-md;
+    }
   }
 
   &:disabled {
@@ -23,10 +30,12 @@
 
   .lightIcon {
     display: none;
+    font-size: 1rem;
   }
 
   .darkIcon {
     display: flex;
+    font-size: 1rem;
   }
 }
 
